计划中的所有消息组件已全部实现，部分样式及功能待完善；语言选择ComboBox优化；补充一些JVM参数设置；语音消息的录制与发送；