@@ -12,18 +12,22 @@ mainClassName = 'com.icuxika.MainApp'
 
 application {
     applicationDefaultJvmArgs = [
+            '-XX:+UseZGC',
+            '-XX:+ShowCodeDetailsInExceptionMessages',
+            '-Dsun.java2d.opengl=true',
             '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
             '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
-            '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED'
+            '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
     ]
 }
 
 javafx {
     version = '15'
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media']
 }
 
 repositories {
